force-app/main/default/objects/EDI_Customer__c/EDI_Customer__c.object-meta.xml
<CustomObject>
    <label>EDI Customer</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>EDI Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDI Customer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>