force-app/main/default/objects/EDI_Customer__c/fields/buyerlevel__c.field-meta.xml
<CustomField>
    <fullName>buyerlevel__c</fullName>
    <label>buyerlevel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>