force-app/main/default/objects/EDI_Customer__c/fields/buyerno__c.field-meta.xml
<CustomField>
    <fullName>buyerno__c</fullName>
    <label>buyerno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>