force-app/main/default/objects/EDI_Customer__c/fields/chnname__c.field-meta.xml
<CustomField>
    <fullName>chnname__c</fullName>
    <label>chnname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>