force-app/main/default/objects/EDI_Customer__c/fields/Connecting_Customer__c.field-meta.xml
<CustomField>
    <fullName>Connecting_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connecting customers</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EDI Customer</relationshipLabel>
    <relationshipName>EDI_ConnectingCustomers</relationshipName>
    <type>Lookup</type>
</CustomField>