force-app/main/default/objects/EDI_Customer__c/fields/countryname__c.field-meta.xml
<CustomField>
    <fullName>countryname__c</fullName>
    <label>countryname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>