force-app/main/default/objects/EDI_Customer__c/fields/createTime__c.field-meta.xml
<CustomField>
    <fullName>createTime__c</fullName>
    <label>createTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>