force-app/main/default/objects/EDI_Customer__c/fields/Customer_Cleaning_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Cleaning_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer_Cleaning__c</referenceTo>
    <relationshipLabel>EDI Customer</relationshipLabel>
    <relationshipName>EDI_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>