force-app/main/default/objects/EDI_Customer__c/fields/updateTime__c.field-meta.xml
<CustomField>
    <fullName>updateTime__c</fullName>
    <label>updateTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>